@@ -11,6 +11,8 @@ import javax.annotation.Nullable;
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 
+import com.simibubi.create.Create;
+
 import com.simibubi.create.foundation.utility.RecipeGenericsUtil;
 
 import net.minecraft.server.packs.resources.ResourceManagerReloadListener;
@@ -19,49 +21,42 @@ import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
 
 /**
- * Utility for searching through a world's recipe collection. Non-dynamic
- * conditions can be split off into an initial search for caching intermediate
- * results.
+ * Utility for searching through a level's recipe collection.
+ * Non-dynamic conditions can be split off into an initial search for caching intermediate results.
  *
  * @author simibubi
- *
  */
 public class RecipeFinder {
+	private static final Cache<Object, List<RecipeHolder<? extends Recipe<?>>>> CACHED_SEARCHES = CacheBuilder.newBuilder().build();
 
-	private static Cache<Object, List<RecipeHolder<? extends Recipe<?>>>> cachedSearches = CacheBuilder.newBuilder().build();
+	public static final ResourceManagerReloadListener LISTENER = resourceManager -> CACHED_SEARCHES.invalidateAll();
 
 	/**
-	 * Find all IRecipes matching the condition predicate. If this search is made
-	 * more than once, using the same object instance as the cacheKey will retrieve
-	 * the cached result from the first time.
+	 * Find all recipes matching the condition predicate.
+	 * If this search is made more than once,
+	 * using the same object instance as the cacheKey will retrieve the cached result from the first search.
 	 *
-	 * @param cacheKey   (can be null to prevent the caching)
-	 * @param world
-	 * @param conditions
+	 * @param cacheKey (can be null to prevent the caching)
 	 * @return A started search to continue with more specific conditions.
 	 */
-	public static List<RecipeHolder<? extends Recipe<?>>> get(@Nullable Object cacheKey, Level world, Predicate<RecipeHolder<? extends Recipe<?>>> conditions) {
+	public static List<RecipeHolder<? extends Recipe<?>>> get(@Nullable Object cacheKey, Level level, Predicate<RecipeHolder<? extends Recipe<?>>> conditions) {
 		if (cacheKey == null)
-			return startSearch(world, conditions);
+			return startSearch(level, conditions);
 
 		try {
-			return cachedSearches.get(cacheKey, () -> startSearch(world, conditions));
+			return CACHED_SEARCHES.get(cacheKey, () -> startSearch(level, conditions));
 		} catch (ExecutionException e) {
-			e.printStackTrace();
+			Create.LOGGER.error("Encountered a exception while searching for recipes", e);
 		}
 
 		return Collections.emptyList();
 	}
 
-	private static List<RecipeHolder<? extends Recipe<?>>> startSearch(Level world, Predicate<? super RecipeHolder<? extends Recipe<?>>> conditions) {
+	private static List<RecipeHolder<? extends Recipe<?>>> startSearch(Level level, Predicate<? super RecipeHolder<? extends Recipe<?>>> conditions) {
 		//noinspection RedundantCast
-		return (List<RecipeHolder<? extends Recipe<?>>>) RecipeGenericsUtil.specify(world.getRecipeManager().getRecipes())
-				.stream().filter(conditions)
-				.collect(Collectors.toList());
+		return (List<RecipeHolder<? extends Recipe<?>>>) RecipeGenericsUtil.specify(level.getRecipeManager().getRecipes())
+				.stream()
+				.filter(conditions)
+				.toList();
 	}
-
-	public static final ResourceManagerReloadListener LISTENER = resourceManager -> {
-		cachedSearches.invalidateAll();
-	};
-
 }
